# TE3001B_TEAM_3

./: .gitignore  .gitmodules  LICENSE  README.md
Documents/: ReporteFinal_Team4.tex  gen_figures.py
MiniReto_PIDMotor/: extra_script.py  platformio.ini
MiniReto_PIDMotor/src/: main.cpp
Retosemana3/: master_data.npz  master_robot.py  net_test.py  reporte_examen.py  slave_robot.py  view_data.py
microros_force_sensor/: platformio.ini
microros_force_sensor/include/: config.h
microros_force_sensor/src/: main.cpp
microros_slave_sensor/include/: config.h
microros_slave_sensor/src/: main.cpp
papubag/: metadata.yaml
src/Challenges/main_pkg/: CMakeLists.txt  package.xml
src/Retosemana3/: master_robot.py  slave_data.npz  slave_robot.py
src/challenges/: CMakeLists.txt  package.xml
src/challenges/src/: process.cpp  sender.cpp
src/lite6_move/: CMakeLists.txt  package.xml
src/lite6_move/data/: team.csv
src/lite6_move/scripts/: lite6_writer.py  litetest.py
src/lite6_move/src/: kinova_hello_moveit.cpp
src/s0s1_gazebo/: CMakeLists.txt  package.xml
src/s0s1_gazebo/config/: so101_controllers.yaml
src/s0s1_gazebo/launch/: gazebo_replay_launch.py  gazebo_sim_launch.py  gzsim_launch.py
src/s0s1_gazebo/scripts/: experiment_configs.py  gazebo_replay_node.py  mujoco_sim.py  plot_experiments.py  run_experiments.py  so101_mujoco_pid_utils.py  state_logger.py
src/s0s1_gazebo/simulation_code/: .gitignore  ACTIVATION.sh  QUICKSTART.md  README.md  diagnose_experiments.py  diagnose_experiments_output.txt  pid_analysis.py  pid_tuning_config.py  pid_tuning_experiment.py  requirements.txt  run_mujoco_simulation2.py  run_pid_tuning_experiments.py
src/s0s1_gazebo/urdf/: so101_gazebo.urdf.xacro
src/speak/: CMakeLists.txt  package.xml
src/speak/launch/: signal_proc.launch.py
src/uros_ws/install/: local_setup.sh  setup.sh
src/uros_ws/log/: latest_build
src/xarm_bilateral_teleop/: package.xml  setup.cfg  setup.py
src/xarm_bilateral_teleop/config/: teleop_params.yaml
src/xarm_bilateral_teleop/isaac_sim/: dual_lite6_sim.py
src/xarm_bilateral_teleop/launch/: bilateral_teleop.launch.py  bilateral_teleop_isaac.launch.py  master.launch.py  servo_bringup.launch.py  slave.launch.py
src/xarm_bilateral_teleop/xarm_bilateral_teleop/: force_estimator.py  force_sensor_node.py  keyboard_teleop.py  kinematics.py  master_node.py  slave_node.py  trajectory_to_joint_state.py
src/xarm_perturbations/: setup.py
src/xarm_perturbations/xarm_perturbations/: evaluator.py  ik_reference_generator.py  position_controller.py  trajectory_generator.py
src/xarm_perturbationsV2/install/: local_setup.sh  setup.sh
src/xarm_perturbationsV2/log/: latest_build
src/xarm_teleops/: README.md  package.xml  setup.cfg  setup.py
src/xarm_teleops/resources/: TE3001B_xArm_Teleoperacion_Fuerza  FINAL.tex
src/xarm_teleops/src/: force_estimator.py  jacobian_utils.py  master_control.py  net_test.py  network_comm.py  slave_control.py  xarm_setup.py
(+98 files in other folders)
