<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>xarm_bilateral_teleop</name>
  <version>0.1.0</version>
  <description>Bilateral force-feedback teleoperation for two xArm Lite6 robots with virtual F/T sensors</description>
  <maintainer email="team3@tec.mx">TE3001B Team 3</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tf2_ros</depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>xarm_moveit_servo</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
