<?xml version="1.0"?>
<package format="3">
  <name>xarm_teleops</name>
  <version>0.1.0</version>
  <description>
    Teleoperación maestro-esclavo con sensado de fuerza para xArm Lite 6.
    TE3001B — Tecnológico de Monterrey 2026.
  </description>
  <maintainer email="alumno@tec.mx">Equipo TE3001B</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-scipy</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
